Updated install and core lang files https://github.com/FrontAccountingERP/FA/commit/f0f7b444137a81aa1a227cbb041f3d7d7eaa1715 https://github.com/FrontAccountingERP/FA/commit/43ad91751a494b2572eb64441248aa3a87f0141e

--- a/core/install/lang/da_DK/LC_MESSAGES/da_DK.po
+++ b/core/install/lang/da_DK/LC_MESSAGES/da_DK.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE TEAM\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-14 14:34+0200\n"
+"POT-Creation-Date: 2015-12-11 13:17+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Joe Hunt <joe.hunt.consulting@gmail.com>\n"
 "Language-Team: Translation Team <ll@LL.org>\n"
@@ -39,7 +39,7 @@ msgstr "Kodning"
 msgid "Description"
 msgstr "Beskrivelse"
 
-#: /install/index.php:49 /install/index.php:76 /install/index.php:398
+#: /install/index.php:49 /install/index.php:76 /install/index.php:395
 msgid "Install"
 msgstr "Installer"
 
@@ -52,8 +52,12 @@ msgid "Language"
 msgstr "Sprog"
 
 #: /install/index.php:124
-msgid "Cannot connect to database. User or password is invalid or you have no permittions to create database."
-msgstr "Kan ikke skabe forbindelse til databasen. Enten er brugernavnet eller adgangskoden forkert eller også har du ikke adgang til at skabe databasen"
+msgid ""
+"Cannot connect to database. User or password is invalid or you have no "
+"permittions to create database."
+msgstr ""
+"Kan ikke skabe forbindelse til databasen. Enten er brugernavnet eller "
+"adgangskoden forkert eller også har du ikke adgang til at skabe databasen"
 
 #: /install/index.php:164
 msgid "Cannot save system configuration file 'config.php'."
@@ -68,8 +72,12 @@ msgid "Cannot write to the 'config_db.php' configuration file."
 msgstr "Kan ikke skrive til 'config_db.php' konfigurationsfilen."
 
 #: /install/index.php:177
-msgid "Configuration file 'config_db.php' is not writable. Change its permissions so it is, then re-run installation step."
-msgstr "Konfigurationsfilen 'config_db.php' er ikke skrivbar. Ändre tilladelsen til det og kör installationenstrinet igen."
+msgid ""
+"Configuration file 'config_db.php' is not writable. Change its permissions "
+"so it is, then re-run installation step."
+msgstr ""
+"Konfigurationsfilen 'config_db.php' er ikke skrivbar. Ändre tilladelsen til "
+"det og kör installationenstrinet igen."
 
 #: /install/index.php:216
 msgid "Host name cannot be empty."
@@ -99,143 +107,163 @@ msgstr "Firma admin password kan ikke være tomt."
 msgid "Company admin passwords differ."
 msgstr "Firma admin password er ikke ens."
 
-#: /install/index.php:323
+#: /install/index.php:320
 msgid "System Diagnostics"
 msgstr "System diagnostik."
 
-#: /install/index.php:325
+#: /install/index.php:322
 msgid "Select install wizard language:"
 msgstr "Vælg installationswizard sprog:"
 
-#: /install/index.php:331
-msgid "All application preliminary requirements seems to be correct. Please press Continue button below."
-msgstr "Alle programmets behov ser ud til at være dækket. Venligst tryk 'Fortsæt' forneden."
+#: /install/index.php:328
+msgid ""
+"All application preliminary requirements seems to be correct. Please press "
+"Continue button below."
+msgstr ""
+"Alle programmets behov ser ud til at være dækket. Venligst tryk 'Fortsæt' "
+"forneden."
 
-#: /install/index.php:332 /install/index.php:360 /install/index.php:367
-#: /install/index.php:374
+#: /install/index.php:329 /install/index.php:357 /install/index.php:364
+#: /install/index.php:371
 msgid "Continue >>"
 msgstr "Fortsæt >>"
 
-#: /install/index.php:334
-msgid "Application cannot be installed. Please fix problems listed below in red, and press Refresh button."
-msgstr "Programmet kan ikke installeres. Venligst ordne problemerne beskrivet forneden i rødt, og tryk 'Genlæs' knappen."
+#: /install/index.php:331
+msgid ""
+"Application cannot be installed. Please fix problems listed below in red, "
+"and press Refresh button."
+msgstr ""
+"Programmet kan ikke installeres. Venligst ordne problemerne beskrivet "
+"forneden i rødt, og tryk 'Genlæs' knappen."
 
-#: /install/index.php:335
+#: /install/index.php:332
 msgid "Refresh"
 msgstr "Genlæs"
 
-#: /install/index.php:345
+#: /install/index.php:342
 msgid "Database Server Settings"
 msgstr "Databaseserver instillinger"
 
-#: /install/index.php:347
+#: /install/index.php:344
 msgid "Server Host:"
 msgstr "Server Host:"
 
-#: /install/index.php:348
+#: /install/index.php:345
 msgid "Database Name:"
 msgstr "Database navn:"
 
-#: /install/index.php:349
+#: /install/index.php:346
 msgid "Database User:"
 msgstr "Database bruger:"
 
-#: /install/index.php:350
+#: /install/index.php:347
 msgid "Database Password:"
 msgstr "Database password:"
 
-#: /install/index.php:351
+#: /install/index.php:348
 msgid "Database Collation:"
-msgstr ""
+msgstr "Database sortering:"
 
-#: /install/index.php:352
+#: /install/index.php:349
 msgid "Use '0_' Table Prefix:"
 msgstr "Brug '0_' tabel prefi:"
 
-#: /install/index.php:352 /includes/system_tests.inc:38
+#: /install/index.php:349 /includes/system_tests.inc:38
 #: /includes/system_tests.inc:113 /includes/system_tests.inc:126
 msgid "Yes"
 msgstr "Ja"
 
-#: /install/index.php:352 /includes/system_tests.inc:38
+#: /install/index.php:349 /includes/system_tests.inc:38
 #: /includes/system_tests.inc:113 /includes/system_tests.inc:126
 msgid "No"
 msgstr "Nej"
 
-#: /install/index.php:353
+#: /install/index.php:350
 msgid "Install Additional Language Packs from FA Repository:"
 msgstr "Installer yderligere sprogpakker fra FA's lager (Repository): "
 
-#: /install/index.php:354
+#: /install/index.php:351
 msgid "Install Additional COAs from FA Repository:"
 msgstr "Installer yderligere kontoplaner fra FA's lager (Repository):"
 
-#: /install/index.php:356
-msgid "Select collation you want to use. If you are unsure or you will use various languages, select unicode collation."
+#: /install/index.php:353
+msgid ""
+"Select collation you want to use. If you are unsure or you will use various "
+"languages, select unicode collation."
 msgstr ""
+"Vælg database sortering du wil bruge. Om du er usikker eller du vil bruge "
+"forskellige sprog, vælg da unicode sortering."
 
-#: /install/index.php:357
-msgid "Use table prefix if you share selected database for more than one FA company using the same collation."
+#: /install/index.php:354
+msgid ""
+"Use table prefix if you share selected database for more than one FA company "
+"using the same collation."
 msgstr ""
+"Brug tabel prefix of du deler valgt database med mere end et firma som "
+"bruger samme sortering."
 
-#: /install/index.php:358
-msgid "Do not select additional langs nor COAs if you have no working internet connection right now. You can install them later."
-msgstr "Vælg ikke yderligere sprog eller kontoplaner hvis du ikke har en fungerende internet forbindelse lige nu. Du kan installere dem senere."
+#: /install/index.php:355
+msgid ""
+"Do not select additional langs nor COAs if you have no working internet "
+"connection right now. You can install them later."
+msgstr ""
+"Vælg ikke yderligere sprog eller kontoplaner hvis du ikke har en fungerende "
+"internet forbindelse lige nu. Du kan installere dem senere."
 
-#: /install/index.php:359 /install/index.php:366 /install/index.php:373
-#: /install/index.php:397
+#: /install/index.php:356 /install/index.php:363 /install/index.php:370
+#: /install/index.php:394
 msgid "<< Back"
 msgstr "<< Tilbage"
 
-#: /install/index.php:364
+#: /install/index.php:361
 msgid "User Interface Languages Selection"
 msgstr "Valg af bruger sprog "
 
-#: /install/index.php:371
+#: /install/index.php:368
 msgid "Charts of Accounts Selection"
 msgstr "Valg af kontoplaner"
 
-#: /install/index.php:388
+#: /install/index.php:385
 msgid "Company Settings"
 msgstr "Firma instillinger"
 
-#: /install/index.php:390
+#: /install/index.php:387
 msgid "Company Name:"
 msgstr "Firmanavn:"
 
-#: /install/index.php:391
+#: /install/index.php:388
 msgid "Admin Login:"
 msgstr "Admin login:"
 
-#: /install/index.php:392
+#: /install/index.php:389
 msgid "Admin Password:"
 msgstr "Admin password:"
 
-#: /install/index.php:393
+#: /install/index.php:390
 msgid "Reenter Password:"
 msgstr "Gentag password:"
 
-#: /install/index.php:394
+#: /install/index.php:391
 msgid "Select Chart of Accounts:"
 msgstr "Vælg kontoplan:"
 
-#: /install/index.php:395
+#: /install/index.php:392
 msgid "Select Default Language:"
 msgstr "Vælg standard sprog:"
 
-#: /install/index.php:398
+#: /install/index.php:395
 msgid "Start installation process"
-msgstr ""
+msgstr "Påbegynd installationen"
 
-#: /install/index.php:402
+#: /install/index.php:399
 msgid "FrontAccounting ERP has been installed successsfully."
 msgstr "FrontAccounting ERP er nu installeret."
 
-#: /install/index.php:403
+#: /install/index.php:400
 msgid "Please do not forget to remove install wizard folder."
 msgstr "Venligst husk at fjerne installationsmappen."
 
-#: /install/index.php:406
+#: /install/index.php:403
 msgid "Click here to start."
 msgstr "Klik her for at starte."
 
@@ -277,7 +305,7 @@ msgstr "PHP version"
 
 #: /includes/system_tests.inc:50
 msgid "Upgrade PHP to version at least 5.0.0"
-msgstr ""
+msgstr "Opgrader PHP til mindst version 5.0.0 "
 
 #: /includes/system_tests.inc:57
 msgid "Server system"
@@ -418,8 +446,11 @@ msgstr "Database Auth fil"
 
 #: /includes/system_tests.inc:323
 #, php-format
-msgid "'%s' file should be read-only if you do not plan to add or change companies"
-msgstr "'%s' filen må være 'read-only' hvis du ikke har planer om at lægge till eller ændre firmaer."
+msgid ""
+"'%s' file should be read-only if you do not plan to add or change companies"
+msgstr ""
+"'%s' filen må være 'read-only' hvis du ikke har planer om at lægge till "
+"eller ændre firmaer."
 
 #: /includes/system_tests.inc:334
 msgid "Extensions system"
@@ -435,12 +466,19 @@ msgid "Non-standard theme directory '%s' is not writable"
 msgstr "Ikke standard theme mappe '%s' er ikk skrivbar"
 
 #: /includes/system_tests.inc:395
-msgid "OpenSSL PHP extension have to be enabled to use extension repository system."
-msgstr "OpenSSL PHP tillæg må være aktiv for at bruge tillægslagersystemet (FA Repository)"
+msgid ""
+"OpenSSL PHP extension have to be enabled to use extension repository system."
+msgstr ""
+"OpenSSL PHP tillæg må være aktiv for at bruge tillægslagersystemet (FA "
+"Repository)"
 
 #: /includes/system_tests.inc:398
-msgid "OpenSSL have to be available on your server to use extension repository system."
-msgstr "OpenSSL må findes på din server for at bruge tillægslagersystem (FA Repository)"
+msgid ""
+"OpenSSL have to be available on your server to use extension repository "
+"system."
+msgstr ""
+"OpenSSL må findes på din server for at bruge tillægslagersystem (FA "
+"Repository)"
 
 #: /includes/system_tests.inc:421
 msgid "Test"
@@ -469,16 +507,17 @@ msgstr "Intet nøglefelt '%s' i filen '%s'"
 
 #: /includes/packages.inc:294
 msgid "Cannot download repo index file."
-msgstr ""
+msgstr "Kan ikke downloade repo indeks fil."
 
 #: /includes/packages.inc:306 /includes/packages.inc:343
 #, php-format
 msgid "Cannot delete outdated '%s' file."
-msgstr ""
+msgstr "Kan ikke slette gammel '%s' fil."
 
 #: /includes/packages.inc:310
 msgid "Release file in repository is invalid, or public key is outdated."
-msgstr "Release felt i repository er ugyldig, eller også er public key for gammel."
+msgstr ""
+"Release felt i repository er ugyldig, eller også er public key for gammel."
 
 #: /includes/packages.inc:327
 msgid "Repository version does not match application version."
@@ -487,24 +526,34 @@ msgstr "Repository versionen matcher ikke program versionen."
 #: /includes/packages.inc:335 /includes/packages.inc:377
 #, php-format
 msgid "Cannot download '%s' file."
-msgstr ""
+msgstr "Kan ikke downloade '%s' fil."
 
 #: /includes/packages.inc:347
 #, php-format
-msgid "Security alert: broken index file in repository '%s'. Please inform repository administrator about this issue."
-msgstr "Sikkerhedsadvarsel: Indeks feltet i repository '%s' er brudt. Informer venligst repository administratoren om dette."
+msgid ""
+"Security alert: broken index file in repository '%s'. Please inform "
+"repository administrator about this issue."
+msgstr ""
+"Sikkerhedsadvarsel: Indeks feltet i repository '%s' er brudt. Informer "
+"venligst repository administratoren om dette."
 
 #: /includes/packages.inc:383
 #, php-format
-msgid "Security alert: broken package '%s' in repository. Please inform repository administrator about this issue."
-msgstr "Sikkerhedsadvarsel: Brudt pakke '%s' i repository. Venligst informer repository administratoren om dette."
+msgid ""
+"Security alert: broken package '%s' in repository. Please inform repository "
+"administrator about this issue."
+msgstr ""
+"Sikkerhedsadvarsel: Brudt pakke '%s' i repository. Venligst informer "
+"repository administratoren om dette."
 
-#: /includes/packages.inc:641 /includes/packages.inc:702
+#: /includes/packages.inc:641 /includes/packages.inc:696
 #, php-format
 msgid "Package '%s' not found."
 msgstr "Pakke '%s' findes ikke."
 
-#~ msgid "Use table prefix if you share selected database for more than one FA company."
+#~ msgid ""
+#~ "Use table prefix if you share selected database for more than one FA "
+#~ "company."
 #~ msgstr "Brug tabel prefix hvis du deler databasen med flere FA firmaer."
 
 #~ msgid "Upgrade PHP to version at least 4.3.3"
