--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-11 Ap.Muthu           Fixed '% s' => '%s' in install lang files for de_DE and pt_PT languages
 2015-12-11/12 Janusz Dobrowolski Updated install and core lang files
 2015-12-11 Janusz Dobrowolski Exchange Rates: removed sparse home currency from selector.
 2015-12-11 Joe Hunt           stock_master table field actual_cost => purchase_cost in standard charts
