--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-12 Joe Hunt           Fixed WorkOrder bugfixes from 2.3 to 2.4
 2015-12-12 Joe Hunt           Moved bugfixes from 2.3 to 2.4
 2015-12-11 Janusz Dobrowolski Version bump in sql and version files
 2015-12-11 Ap.Muthu           Fixed '% s' => '%s' in install lang files for de_DE and pt_PT languages
