--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-22 Joe Hunt           Fixed shrinking screen problem in canvas theme
 2015-12-21 Ap.Muthu           Dashboard. When empty data in company, suppress graphics.
 2015-12-20 Joe Hunt           Added GL Performance Chart in Dashboard and Rerun
 2015-12-16 Joe Hunt           Matched whitespace with upstream for previous commit
