--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-05-20 Janusz Dobrowolski
+Fixed bug in bank account edition and re-run
+M	gl/manage/bank_accounts.php
+ 
 2016-05-17 Janusz Dobrowolski
 Fixed typos in installer translation files, fixed translations in dashboard procedures.
 M	includes/dashboard.inc
