Tabbed dialogs allowed non access pages and re-runs. https://github.com/FrontAccountingERP/FA/commit/7da63db70a6ca210a46a9322d1f299ec663bb66d https://github.com/FrontAccountingERP/FA/commit/63adfdf6af29bf5dbe5ccbf1162fc27e63bf1e04 https://github.com/FrontAccountingERP/FA/commit/99df2fbc2f147b3a1e20a4cdfa70c2720e67e4cb http://frontaccounting.com/punbb/viewtopic.php?pid=25562#p25562

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2016-05-27 Joe Hunt
+Tabbed dialogs allowed non access pages and re-runs.
+M	inventory/manage/items.php
+M	js/inserts.js
+M	purchasing/manage/suppliers.php
+M	sales/manage/customers.php
+
 2016-05-23 Joe Hunt
 Bloomberg Rate fix for change of wrapper from span to div.
 M	gl/includes/db/gl_db_rates.inc
