Bug. is_date_closed() should be performed before is_date_in_fiscalyears(). https://github.com/FrontAccountingERP/FA/commit/8143beb0b9260509cfd1e73acd3d29c965760763 http://frontaccounting.com/punbb/viewtopic.php?id=6324 Part of https://github.com/genebarker/FA/commit/f4cb46245de1dc271b8ab22c45e94866d5b042fd

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2016-07-08 Joe Hunt
+Bug. is_date_closed() should be performed before is_date_in_fiscalyears().
+M	admin/void_transaction.php
+M	includes/date_functions.inc
+
 2016-05-27 Joe Hunt
 Tabbed dialogs allowed non access pages and re-runs.
 M	inventory/manage/items.php
