Bug 3585. 'Exclude from purchase' function not working in PO. https://github.com/FrontAccountingERP/FA/commit/6fb80166484027d3c4f29a25b6bbb52c299dd983 http://mantis.frontaccounting.com/view.php?id=3585 Inventory: Both on Item Category level and on Item level, when setting Exclude from purchases, the items and groups still appear on the item lists when creating purchase order/invoice.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-07-15 Joe Hunt
+Bug 3585. 'Exclude from purchase' function not working in PO. 
+M	purchasing/includes/ui/po_ui.inc
+
 2016-07-08 Joe Hunt
 Bug. is_date_closed() should be performed before is_date_in_fiscalyears().
 M	admin/void_transaction.php
