--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-07-24 Ap.Muthu
+Minor bug in deleting fiscal years
+M	admin/db/fiscalyears_db.inc
+
 2016-07-15 Joe Hunt
 Bug 3585. 'Exclude from purchase' function not working in PO. 
 M	purchasing/includes/ui/po_ui.inc
