Dimension is missing in Supplier Invoice View. GL Rows. Re-Run too. https://github.com/FrontAccountingERP/FA/commit/00e2b370d611a95a8deb43f2859edd5cc6792713 https://github.com/FrontAccountingERP/FA/commit/4f8c525912353e56d6b78f2020a126012f1acca9 http://frontaccounting.com/punbb/viewtopic.php?id=6371

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2016-07-26 Joe Hunt
+Dimension is missing in Supplier Invoice View. GL Rows. Re-Run too.
+M	purchasing/includes/db/invoice_db.inc
+M	purchasing/includes/db/invoice_items_db.inc
+
 2016-07-24 Ap.Muthu
 Minor bug in deleting fiscal years
 M	admin/db/fiscalyears_db.inc
