Fix https://github.com/FrontAccountingERP/FA/issues/16 : Manage Suppliers - Fix error introduced in https://github.com/FrontAccountingERP/FA/commit/99df2fbc2f147b3a1e20a4cdfa70c2720e67e4cb https://github.com/apmuthu/frontac24/commit/a55cc8f5a5c94e462c7feb008b9153b4e7088eef#diff-e64608f7b0d7836822df36f65f92f3fe https://github.com/FrontAccountingERP/FA/pull/17 Tested at https://travis-ci.org/cambell-prince/frontaccounting/branches

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-08-06 Cambell
+Fix for bug in suppliers.php
+M	purchasing/manage/suppliers.php
+
 2016-08-01 Joe Hunt
 Removed redundant line in reporting/includes/header2.inc. 
 M	reporting/includes/header2.inc
