Fixed broken html entities handling in longer TextWrap fields in reports. https://github.com/FrontAccountingERP/FA/commit/135fa36e58e67cf54681b896b3f60d7c3dce32d2 https://sourceforge.net/p/frontaccounting/git/ci/135fa36e58e67cf54681b896b3f60d7c3dce32d2/ http://frontaccounting.com/punbb/viewtopic.php?pid=25973#p25973

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-08-06 Janusz Dobrowolski
+Fixed broken html entities handling in longer TextWrap fields in reports. 
+M	reporting/includes/class.pdf.inc
+
 2016-08-06 Cambell
 Fix for bug in suppliers.php
 M	purchasing/manage/suppliers.php
