Ajax calls: set the checkbox value = 0 for an unset checkbox rather than skipping the element. https://github.com/FrontAccountingERP/FA/commit/31d8a82446920511a28c940ce9f4678906e4fcf1

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-08-30 Cambell
+Ajax calls: set the checkbox value = 0 for an unset checkbox rather than skipping the element.
+M js/utils.js
+
 2016-08-06 Janusz Dobrowolski
 Fixed broken html entities handling in longer TextWrap fields in reports. 
 M	reporting/includes/class.pdf.inc
