Increased space for built in number columns etc. in reports. https://github.com/FrontAccountingERP/FA/commit/68bf09b0ddf5bbe3a0155d288f4d0334104a9538 http://frontaccounting.com/punbb/viewtopic.php?id=6456

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,14 @@
+2016-09-06 Joe Hunt
+Increased space for built in number columns etc. in reports.
+M reporting/rep101.php
+M reporting/rep201.php
+M reporting/rep203.php
+M reporting/rep601.php
+M reporting/rep602.php
+M reporting/rep701.php
+M reporting/rep706.php
+M reporting/rep707.php
+
 2016-08-30 Cambell
 Added functions for custom css files registered by modules
 M includes/main.inc
