Fixed problem with installing third party extension packages. https://github.com/FrontAccountingERP/FA/commit/1285e40718bc5b86f2630a8cea3230c7419024f7 http://frontaccounting.com/punbb/viewtopic.php?pid=26260#p26260 All extensions / modules in FA 2.4+ should have their package version numbers in init/config file and must start with 2.4.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-09-06 Janusz Dobrowolski
+Fixed problem with installing third party extension packages.
+M includes/packages.inc
+
 2016-09-06 Joe Hunt
 Increased space for built in number columns etc. in reports.
 M reporting/rep101.php
