--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-11-18 Joe Hunt
+Fixed Bug 3667: supplier payment link error after entering supplier invoice.
+M purchasing/supplier_invoice.php
+
 2016-09-06 Janusz Dobrowolski
 Fixed problem with installing third party extension packages.
 M includes/packages.inc
