Fixed A Bug in Item Sales Summary Report https://github.com/FrontAccountingERP/FA/commit/840f9a44261cdf4ee95a5cc9a29314b9ddb06b9c http://frontaccounting.com/punbb/viewtopic.php?id=6542

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-11-29
+Fixed A Bug in Item Sales Summary Report
+M reporting/rep309.php
+
 2016-11-18 Joe Hunt
 Fixed Bug 3667: supplier payment link error after entering supplier invoice.
 M purchasing/supplier_invoice.php
