Rerun Item Sales Summary Report Fix https://github.com/FrontAccountingERP/FA/commit/5fb0585fed8931145e34038debf2323d434f3b51 http://frontaccounting.com/punbb/viewtopic.php?id=6542

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-12-04
+Rerun Item Sales Summary Report Fix
+M reporting/rep309.php
+
 2016-11-29
 Fixed A Bug in Item Sales Summary Report
 M reporting/rep309.php
