--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2016-12-23
+Bug submitting forms in FA 2.4.x when checkbox field not changed. Fixed.
+M includes/ui/ui_input.inc
+
 2016-12-04
 Rerun Item Sales Summary Report Fix
 M reporting/rep309.php
