--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-01-15
+[0003658] Errors during reference line edition when no table prefix is used.
+M includes/db/class.reflines_db.inc
+
 2016-12-23
 Bug submitting forms in FA 2.4.x when checkbox field not changed. Fixed.
 M includes/ui/ui_input.inc
