[0003733] Fixed php7 compatibility issue. Earlier passed by reference and used by reference (Legacy PHP 5.2.x and prior) https://github.com/FrontAccountingERP/FA/commit/c77dd90d71559d2322ce2419c1df0af64c911241

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-01-15
+[0003733] Fixed php7 compatibility issue.
+M  frontaccounting.php
+
+2017-01-15
 [0003658] Errors during reference line edition when no table prefix is used.
 M includes/db/class.reflines_db.inc
 
